[package]
name = "cached_db"
version = "0.1.0"
edition = "2021"
authors = [ "Cyteon" ]
license = "MIT"
license-file = "LICENSE"
keywords =  [ "database", "cache" ]
exclude = [ "/db" ]

[dependencies]
tokio = { version = "1", features = ["full"] }
bson = "2.13.0"
serde = { version = "1.0", features = ["derive"] }
